--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["./@types", "./node_modules/@types"],
+    "baseUrl": "src"
   },
   "include": [
     "src"
